--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Office365WebDesktop",
-  "version": "1.0.0",
+  "version": "0.6.0",
   "description": "It is a simple desktop application for Office365 of the web version for linux",
   "main": "./src/main.js",
   "scripts": {
@@ -44,10 +44,13 @@
   },
   "snap": {
     "confinement": "strict",
-    "grade": "stable"
+    "grade": "beta"
   },
   "devDependencies": {
     "electron": "^12.0.4",
     "electron-builder": "^22.9.1"
+  },
+  "dependencies": {
+    "@anujdatar/appconfig": "^2.2.0"
   }
 }
