Changes and update 0.7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cSpell.language": "es, en"
+    "cSpell.language": "es,en,es-ES,en-US,en-GB",
+    "cSpell.words": [
+        "Ealo",
+        "rafgui"
+    ]
 }
