Correcion de name register

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: Office365WebDesktop
+name: office365webdesktop
 summary: Visualise storage utilisation.
 description: |
     "It is a simple desktop application for 
